<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ocupacion_gradient">

    <!-- CONTENEDOR PREMIUM -->
    <LinearLayout
        android:id="@+id/containerOcupacion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/tvBackOcupacion"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/volver"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/tvTituloOcupacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocupaci_n"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSubtituloOcupacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/plazas_reservadas_por_clase"
            android:textSize="14sp"
            android:textColor="#FFECEC"/>

        <!-- TARJETAS -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOcupacion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:clipToPadding="false"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>